--- a/platform-jobs/samza/test-samza/src/main/config/test-samza.properties
+++ b/platform-jobs/samza/test-samza/src/main/config/test-samza.properties
@@ -13,7 +13,7 @@ metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 
 # Task
 task.class=org.ekstep.jobs.samza.task.TestSamzaTask
-task.inputs=kafka.test.samza
+task.inputs=kafka.learning.job.request
 task.checkpoint.factory=org.apache.samza.checkpoint.kafka.KafkaCheckpointManagerFactory
 task.checkpoint.system=kafka
 task.checkpoint.replication.factor=1
