--- a/platform-jobs/samza/composite-search-indexer/src/main/config/composite-search-indexer.properties
+++ b/platform-jobs/samza/composite-search-indexer/src/main/config/composite-search-indexer.properties
@@ -60,7 +60,7 @@ route.bolt.write.domain=__lp_bolt_write_url__
 route.all=__other_bolt_url__
 route.bolt.read.all=__other_bolt_read_url__
 route.bolt.write.all=__other_bolt_write_url__
-shard.id=__mw_shard_id__
+shard.id=__mw_shard_id__And really
 graph.dir="/data/graphDB"
 graph.ids=domain,language,en,hi,ka,te,ta
 platform.auth.check.enabled=false
