Added pdf generator module to handle question paper generation

--- a/platform-core/unit-tests/src/test/resources/application.conf
+++ b/platform-core/unit-tests/src/test/resources/application.conf
@@ -76,6 +76,7 @@ cloud_storage.env=dev
 cloud_storage.content.folder = "content"
 cloud_storage.asset.folder = "assets"
 cloud_storage.artefact.folder = "artifact"
+cloud_storage.asset.folder="assets"
 cloud_storage.bundle.folder = "bundle"
 cloud_storage.media.folder = "media"
 cloud_storage.ecar.folder = "ecar_files"
