--- a/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
+++ b/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
@@ -79,6 +79,7 @@ cloud_storage.env=__cloud_storage_config_environment__
 cloud_storage.content.folder=content
 cloud_storage.asset.folder=assets
 cloud_storage.artefact.folder=artifact
+cloud_storage.assessment.folder=assessment
 cloud_storage.bundle.folder=bundle
 cloud_storage.media.folder=media
 cloud_storage.ecar.folder=ecar_files
